Wed Jun 13 18:46:23 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * dds/idl/CPPTemplate.txt:
        * tests/DCPS/Rejects/DataReaderListener.cpp:
        * tests/DCPS/Rejects/publisher.cpp:

          Fixes for warnings.

Wed Jun 13 17:06:22 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * dds/idl/CPPTemplate.txt:
        * tests/DCPS/Rejects/README:
        * tests/DCPS/Rejects/subscriber.cpp:

          Fixed fuzz errors.

Wed Jun 13 16:11:58 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.cpp:

          In delete_topic(), check if a topic is used by any
          reader or writer before allowing it to be deleted.
          Fixes bugzilla bug #4045.

Wed Jun 13 15:49:14 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tools/scripts/lcov.pl:

          Fixing fuzz errors.

Wed Jun 13 14:38:48 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:

          Fix for log file name handling when ACE_TCHAR is
          a wchar_t.

Wed Jun 13 07:51:57 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/QOS_XML_Handler/QOS_XML_Loader.h:
        * dds/DCPS/QOS_XML_Handler/QOS_XML_Loader.cpp:
          Fixed valgrind errors

        * tests/DCPS/QoS_XML/dump/run_test.pl:
          Simplified this script

Wed Jun 13 06:55:46 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/Service_Participant.cpp:
          Fixed warning

Tue Jun 12 21:32:52 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderCallbacks.h:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterCallbacks.h:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/TopicImpl.h:
        * dds/DCPS/TopicImpl.cpp:
        * dds/DdsDcpsInfoUtils.idl:

          Allow a status change for InconsistentTopicStatus.  This will only