@@ -1,3 +1,9 @@
+Wed Jun 13 21:41:24 UTC 2012  Trevor Fields  <fields_t@ociweb.com>
+
+        * dds/DCPS/DataReaderImpl.cpp:
+
+          Changed a few missed listener pointer references.
+
 Wed Jun 13 18:46:23 UTC 2012  Trevor Fields  <fields_t@ociweb.com>
 
         * dds/idl/CPPTemplate.txt:
